# Beam

./: CMakeLists.txt  Makefile  README.md
includes/: Application.h  Camera.h  Game.h  Renderer.h  Scene.h  Shader.h  Texture.h  Window.h  Windows.h
lib/glad/include/KHR/: khrplatform.h:Zone.Identifier
lib/glfw-3.4/docs/html/: group__hat__state.html:Zone.Identifier
shaders/: fragmentShader.fs  lightCubeShader.fs  lightCubeShader.vs  vertexShader.vs
src/: Application.cpp  Camera.cpp  File.cpp  File.h  Game.cpp  Object.cpp  Object.h  Raytracer.cpp  Raytracer.h  Renderer.cpp  Scene.cpp  Shader.cpp  Texture.cpp  Window.cpp  main.cpp
