cmake_minimum_required(VERSION 3.10)
project(Beam)
add_executable(Beam ./src/main.cpp ./src/Window.cpp)
target_include_directories(Beam PRIVATE ${CMAKE_SOURCE_DIR}/includes)
add_subdirectory(./lib/glad)
target_link_libraries(Beam PRIVATE glad)
add_subdirectory(./lib/glfw-3.4)
target_link_libraries(Beam PRIVATE glfw)
add_subdirectory(./lib/glm)
target_link_libraries(Beam PRIVATE glm::glm)
